--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a class='round-button' onclick=lineColor(8) style="background:brown; grid-area: brown;"></a>
             <a class='square-button' onclick=lineColor(9) style="background:grey; grid-area: eraser;">Erase</a>
             <a class='square-button' onclick=clearCanvas() style="background:grey; grid-area: clear;">Clear</a>
+            <a class='square-button' onclick=downloadCanvas() style="background:grey; grid-area: download;">Download as PNG</a>
             <form action="#" style="background: line; color: black;">
                 <label for="lineStroke">Line Width</label>
                 <input type="number" id="lineStroke" style="width:60px;"/>
